[PRMT-1793] Refactored ehrExtractMessageId to messageId for large-ehr endpoint
